--- a/wbdv-spring21-jhz-server-java/src/main/webapp/cover/index.html
+++ b/wbdv-spring21-jhz-server-java/src/main/webapp/cover/index.html
@@ -39,27 +39,25 @@
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
     
-<div class="cover-container d-flex w-100 h-80 p-3 mx-auto flex-column">
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
       <h3 class="float-md-start mb-0">Course Manager</h3>
-      <br>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="login/login.template.client.html">Login</a>
-        <a class="nav-link" href="register/register.template.client.html">Sign Up</a>
-        <a class="nav-link" href="profile/profile.template.client.html">Profile</a>
-        <a class="nav-link" href="courselist/courselist.template.client.html">Course List</a>
-        <a class="nav-link" href="editor/editor.template.client.html">Editor</a>
+        <a class="nav-link" href="../login/login.template.client.html">Login</a>
+        <a class="nav-link" href="../register/register.template.client.html">Sign Up</a>
+        <a class="nav-link" href="../profile/profile.template.client.html">Profile</a>
+        <a class="nav-link" href="../courselist/courselist.template.client.html">Course List</a>
+        <a class="nav-link" href="../editor/editor.template.client.html">Editor</a>
 
       </nav>
     </div>
   </header>
 
   <main class="px-3">
-    <h1>Manager Your Course</h1>
-    <p class="lead">The university has transitioned fully to Canvas as the home base for all Northeastern courses.
-      Faculty and student resources are available to help maximize teaching and learning on the platform. </p>
+    <h1>Cover your page.</h1>
+    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
     <p class="lead">
       <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
     </p>
