modified the course editor and the homepage

--- a/wbdv-spring21-jhz-server-java/src/main/webapp/courselist/courselist.template.client.html
+++ b/wbdv-spring21-jhz-server-java/src/main/webapp/courselist/courselist.template.client.html
@@ -101,6 +101,9 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <a class="navbar-brand" href="#">Course Manager</a>
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link bg-secondary " href="../index.html">Home</a>
+                    </li>
                 </ul>
             </div>
             <form class="form-inline my-2 my-lg-0">
