Modified a1 according to the comments

--- a/wbdv-spring21-jhz-server-java/src/main/webapp/editor/editor.template.client.html
+++ b/wbdv-spring21-jhz-server-java/src/main/webapp/editor/editor.template.client.html
@@ -56,7 +56,6 @@
 <body>
     <div class="home-container">
         <div class="row" >
-
             <div class="container-fluid">
             <nav class="navbar navbar-extend-lg navbar-dark bg-secondary" style="background-color: dimgrey">
                 <div class="col-md-1">
@@ -72,7 +71,7 @@
 
                 <ul class="nav nav-pills nav-fill col-md-8">
                     <li class="nav-item">
-                        <a class="nav-link bg-secondary " href="#">Build</a>
+                        <a class="nav-link btn btn-block bg-secondary active" href="#">Build</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link bg-secondary " href="#">Pages</a>
@@ -106,8 +105,8 @@
                             <ul class="nav">
                                 <div class="container">
                                     <label class="row"></label>
-                                    <li class="sidenav-item">
-                                        <button type="button" class="btn btn-secondary btn-md col-md-12 navbtn">
+                                    <li class="sidenav-item ">
+                                        <button type="button" class="btn btn-secondary active btn-md col-md-12 navbtn">
                                             <div class="container">
                                                 <div class="row">
                                                     Module 1 - JQuery
