--- a/wbdv-spring21-jhz-server-java/src/main/webapp/index.html
+++ b/wbdv-spring21-jhz-server-java/src/main/webapp/index.html
@@ -52,6 +52,7 @@
         <a class="nav-link" href="profile/profile.template.client.html">Profile</a>
         <a class="nav-link" href="courselist/courselist.template.client.html">Course List</a>
         <a class="nav-link" href="editor/editor.template.client.html">Editor</a>
+        <a class="nav-link" href="user-admin/user-admin.template.client.html">User-Admin</a>
 
       </nav>
     </div>
