--- a/wbdv-spring21-jhz-server-java/src/main/webapp/login/login.template.client.html
+++ b/wbdv-spring21-jhz-server-java/src/main/webapp/login/login.template.client.html
@@ -39,10 +39,11 @@
         <label class="col-sm-2 col-form-label">
         </label>
         <div class="col-sm-10">
-            <button class="btn btn-primary btn-block">Sign in</button>
+            <a class="btn btn-primary btn-block"
+               href="../profile/profile.template.client.html">Sign in</a>
             <div class="row">
                 <div class="col" style="text-align-last: left">
-                    <a>Forgot Password ?</a>
+                    <a href="#">Forgot Password ?</a>
                 </div>
                 <div class="col" style="text-align-last: right">
                     <a href="../register/register.template.client.html">Sign Up</a>
