--- a/wbdv-spring21-jhz-server-java/src/main/webapp/register/register.template.client.html
+++ b/wbdv-spring21-jhz-server-java/src/main/webapp/register/register.template.client.html
@@ -53,7 +53,8 @@
         <label class="col-sm-2 col-form-label">
         </label>
         <div class="col-sm-10">
-            <button class="btn btn-primary btn-block">Sign Up</button>
+            <a class="btn btn-primary btn-block"
+               href="../profile/profile.template.client.html">Sign Up</a>
             <div class="row">
                 <div class="col" style="text-align-last: left">
                     <a href="../login/login.template.client.html">Login</a>
