--- a/wbdv-spring21-jhz-server-java/src/main/webapp/user-admin/user-admin.template.client.html
+++ b/wbdv-spring21-jhz-server-java/src/main/webapp/user-admin/user-admin.template.client.html
@@ -23,8 +23,13 @@
 
 <body class="bg-light">
   	<nav class="navbar navbar-extend-lg navbar-dark bg-secondary">
-    	<H3 class="text-white"
-		id = "heading">User Admin</H3>
+		<div>
+			<H3 class="text-white"
+				 id = "heading">User Admin</H3>
+		</div>
+		<div class="pull-right">
+			<a class="nav-link text-white font-weight-bold" href="../index.html">Home</a>
+		</div>
   	</nav>
   	<nav class="navbar navbar-expand-lg bg-light sticky-top">
 		<div class="container-fluid">
